<resources>
    <!--app name-->
    <string name="app_name">DigiReport</string>


    <string name="email">info.digireport@gmail.com</string>
    <!-- Titles-->
    <string name="text_add_medical">Add your Medical History</string>
    <string name="text_store_medical">Store your medical reports</string>
    <string name="text_get_data_anytime">Get your data anytime</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_signin_to_continue">Sign in to continue</string>
    <string name="text_signin_here">Sign In here</string>
    <string name="text_tnc">Terms and Conditions</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email Address</string>
    <string name="text_mobile">Mobile number</string>
    <string name="text_pwd">Password</string>
    <string name="text_verification">Verification</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_my_reports">My reports</string>
    <string name="text_add_reports">Add reports</string>
    <string name="text_search">Search</string>
    <string name="text_medical_reports">Medical Reports</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_help">Help</string>
    <string name="text_acc_settings">My Account</string>
    <string name="text_logout">Log out</string>

    <!-- Questions-->
    <string name="text_already_signed_up">Already signed up?</string>

    <!-- Description-->
    <string name="text_accept_tnc">By signing in you accept our </string>
    <string name="text_insert_code_here">Insert your code here</string>
    <string name="desc_dont_have_an_acc">Don\'t have an account?</string>
    <string name="desc_enter_cred">Enter Credentials here!</string>

    <!-- Buttons-->
    <string name="text_next">Next</string>
    <string name="text_skip">Skip</string>
    <string name="text_signup">Sign up</string>
    <string name="text_signin">Sign In</string>
    <string name="text_continue">Continue</string>
    <string name="text_change_num">Change Number</string>
    <string name="text_resent_code">Resent code</string>
    <string name="text_upload_report">Upload Report</string>
    <string name="text_get_started">Get started</string>
    <string name="desc_enter_following_details">Enter following Details</string>
    <string name="text_sign_up_here">Sign up here</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu-->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_add_reports">Add Reports</string>
    <string name="menu_my_reports">My Reports</string>
    <string name="menu_my_acc">My Account</string>
    <string name="text_report_name">Report Name</string>


    <string name="shared_pref_first_time_user">IS_FIRST_TIME_USER</string>
    <string name="shared_pref_user_name">USER_NAME</string>
    <string name="shared_pref_user_email">USER_EMAIL</string>
    <string name="shared_pref_total_reports">TOTAL_REPORTS</string>
    <string name="text_write_your_feedback">Write your Feedback</string>
    <string name="btn_submit">Submit</string>
    <string name="text_thank_you_for_using_digireport">Thank you for using DigiReport!</string>
    <string name="text_leave_your_feedback_for_digireport">Leave your feedback for DigiReport</string>
    <string name="text_add_another_report">Add another Report</string>


    <!--    Reports terminology-->
    <string name="report_haemogram">Haemogram Report</string>
    <string name="report_blood_counts">Blood Counts</string>
    <string name="report_hb">Haemoglobin</string>
    <string name="report_rbc">RBC</string>
    <string name="report_wbc">WBC</string>
    <string name="report_platelet">Platelets</string>
    <string name="report_diff_counts">Differential Counts</string>
    <string name="report_polymorphs">Polymorphs</string>
    <string name="report_lymphocytes">Lymphocytes</string>
    <string name="report_eosinophils">Eosinophils</string>
    <string name="report_monocytes">Monocytes</string>
    <string name="report_basophils">Basophils</string>
    <string name="report_blood_indices">Blood Indices</string>
    <string name="report_mcv">MCV</string>
    <string name="report_mch">MCH</string>
    <string name="report_mchc">MCHC</string>
    <string name="report_rdw">RDW</string>
    <string name="report_advise">Conclusion Advise</string>
    <string name="report_blood_group">Blood Group</string>

    <string name="report_blood_sugar_level">Blood Sugar Level</string>
    <string name="report_blood_sugar">Blood Sugar</string>
    <string name="report_urine_sugar">Urine sugar</string>
    <string name="report_pathologist">Pathologist</string>

    <string name="report_renal_function">Renal Function Tests</string>
    <string name="report_blood_urea">Blood Urea</string>
    <string name="report_blood_urea_nitrogen">Blood Urea Nitrogen</string>
    <string name="report_serum_creatinine">Serum Creatinine</string>
    <string name="report_serum_uric_acid">Serum Uric Acid</string>

    <string name="report_liver_function_test">Liver Function Test</string>
    <string name="report_s_bilirubin">S. Bilirubin</string>
    <string name="report_s_bilirubin_direct">Direct</string>
    <string name="report_s_bilirubin_total">Total</string>
    <string name="report_s_bilirubin_indirect">Indirect</string>
    <string name="report_sgpt">S.G.P.T.(ALT)</string>
    <string name="report_s_alkaline">Alkaline Phosphatase</string>
    <string name="report_sgot">SGOT (AST)</string>
    <string name="report_serum_proteins">Serum Proteins</string>
    <string name="report_serum_proteins_total">Total</string>
    <string name="report_serum_proteins_albumin">Albumin</string>
    <string name="report_serum_proteins_globulins">Globulins</string>
    <string name="report_serum_proteins_agratio">A/G Ratio</string>
    <string name="text_report_information">Report Information</string>
    <string name="text_step1">Step 1: Go to Add your report section</string>
    <string name="text_step2">Step 2: Add report name and report image (must be png/jpg/jpeg) and hit add report button</string>
    <string name="text_step3">Step 3: See your added report in the view report option</string>
    <string name="text_edit_report_information">Edit Text Information</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_send_reset_password_link">Send Reset Password Link</string>
</resources>
