<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_new_reports"
            android:icon="@drawable/ic_add_report_icon"
            android:title="@string/menu_add_reports" />
        <item
            android:id="@+id/nav_med_reports"
            android:icon="@drawable/ic_file_icon24"
            android:title="@string/text_medical_reports" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_icon"
            android:title="@string/text_feedback" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_icon"
            android:title="@string/text_help" />
        <item
            android:id="@+id/nav_acc_settings"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/text_acc_settings" />
    </group>
</menu>