<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/startup_background_color"
    tools:context=".common.LoginActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_app_icon_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:textStyle="bold"
            android:fontFamily="@font/circular_std_medium"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/text_signin"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/circular_std_book"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_enter_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:text="@string/desc_enter_cred"
        android:fontFamily="@font/circular_std_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/edittext_si_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/text_email"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email_icon"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/edittext_si_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/text_pwd"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_key"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/cv_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_signin"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:fontFamily="@font/circular_std_black"
            android:gravity="center_horizontal" />

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_already_su"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_dont_have_an_acc"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/frame1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:fontFamily="@font/circular_std_medium"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_signup_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up_here"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/tv_already_su"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/circular_std_medium"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>